welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: value update is not a member of java.awt.Color
	while (getCouleurSol()=Color.green) {
               ^